# rocket_api_rest

./: .env  .gitignore  Cargo.toml  Makefile  README.md
migrations/2023-02-23-115959_people/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/db/: person.rs
src/models/: bad_request.rs  person.rs
