[package]
name = "rocket-api-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = {version = "0.5.0-rc.2" , features = ["json"]}
diesel = { version = "2", features = ["postgres","r2d2"] }
once_cell = "1.16"
serde = "1.0"
thiserror = "1.0"
